# arena-rosnav

./: .dockerignore  .gitignore  .rosinstall  .rosinstall.melodic  .rosinstall.noetic  Dockerfile  README.md  README_WP.md  README_for_noise_and_delay_modules.md  TIIevals03032021(2).ipynb  TIIevals31012021.ipynb  Training_Log.md  clone-all-branches.sh  docker-compose-Training.yml  docker-compose-test.yml  docker-compose-training.yml  docker-compose.yml  easy_click.py  eva_empty.ods  eva_map1.ods  eva_mean.ods  eva_summary.ods  geometry2_install.sh  identify-large-files.sh  install.sh  install_docker.sh  pyproject.toml  requirements.txt  setup.sh  setup2.sh  terminal_output.txt  training-on-GPU-server.md  tree.txt
.devcontainer/: devcontainer.json  docker-compose.yml
Docker/: Dockerfile  DockerfileForTraining.Dockerfile  README.md  docker-compose.yml  entrypoint.bash  entrypoint_training.bash  entrypoint_training.sh  novnc.env  ros.env  training.Dockerfile
HPP/: record.py
P10_utils/: README.md
P10_utils/navprediction-nn/: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  test_main.py  test_util.py  train.sh  util.py
P10_utils/navprediction-nn/fixtures/data/test/2aedc75e-f7bd-474d-a3b9-99c91b4297b2/: 2aedc75e-f7bd-474d-a3b9-99c91b4297b2_map_complexity_metrics.yml  2aedc75e-f7bd-474d-a3b9-99c91b4297b2_map_obstacle_metrics.yml  2aedc75e-f7bd-474d-a3b9-99c91b4297b2_performance_metrics.yml
P10_utils/navprediction-nn/fixtures/data/test/2b8ecf50-381c-4316-8801-793a21da46f8/: 2b8ecf50-381c-4316-8801-793a21da46f8_map_complexity_metrics.yml  2b8ecf50-381c-4316-8801-793a21da46f8_map_obstacle_metrics.yml  2b8ecf50-381c-4316-8801-793a21da46f8_performance_metrics.yml
P10_utils/navprediction-nn/fixtures/data/test/3b05ac41-5d42-488c-8754-92276027123f/: 3b05ac41-5d42-488c-8754-92276027123f_map_complexity_metrics.yml  3b05ac41-5d42-488c-8754-92276027123f_map_obstacle_metrics.yml  3b05ac41-5d42-488c-8754-92276027123f_performance_metrics.yml  3b05ac41-5d42-488c-8754-92276027123f_robot_metrics.yml
P10_utils/navprediction-nn/fixtures/data/train/00c19ca5-cdc8-445c-b69b-110af5719c66/: 00c19ca5-cdc8-445c-b69b-110af5719c66_map_complexity_metrics.yml  00c19ca5-cdc8-445c-b69b-110af5719c66_map_obstacle_metrics.yml  00c19ca5-cdc8-445c-b69b-110af5719c66_performance_metrics.yml
P10_utils/navprediction-nn/fixtures/data/train/0e2f594e-15c5-475c-840e-18dd4a2c183a/: 0e2f594e-15c5-475c-840e-18dd4a2c183a_map_complexity_metrics.yml  0e2f594e-15c5-475c-840e-18dd4a2c183a_map_obstacle_metrics.yml  0e2f594e-15c5-475c-840e-18dd4a2c183a_performance_metrics.yml
P10_utils/navprediction-nn/fixtures/data/train/1ef860b8-7b90-47f4-8960-785b0e31d03a/: 1ef860b8-7b90-47f4-8960-785b0e31d03a_map_complexity_metrics.yml  1ef860b8-7b90-47f4-8960-785b0e31d03a_map_obstacle_metrics.yml  1ef860b8-7b90-47f4-8960-785b0e31d03a_performance_metrics.yml  1ef860b8-7b90-47f4-8960-785b0e31d03a_robot_metrics.yml
P10_utils/navprediction-nn/fixtures/data/val/4bc5c323-7c25-48c7-a8af-b8b183eb7536/: 4bc5c323-7c25-48c7-a8af-b8b183eb7536_map_complexity_metrics.yml  4bc5c323-7c25-48c7-a8af-b8b183eb7536_map_obstacle_metrics.yml  4bc5c323-7c25-48c7-a8af-b8b183eb7536_performance_metrics.yml
P10_utils/navprediction-nn/fixtures/data/val/4c8b897d-28ae-42e0-b9dc-af0ec7ade56d/: 4c8b897d-28ae-42e0-b9dc-af0ec7ade56d_map_complexity_metrics.yml  4c8b897d-28ae-42e0-b9dc-af0ec7ade56d_map_obstacle_metrics.yml  4c8b897d-28ae-42e0-b9dc-af0ec7ade56d_performance_metrics.yml
P10_utils/navprediction-nn/fixtures/data/val/5c9d3b98-43e4-4fd0-adaa-cc52c216d4a0/: 5c9d3b98-43e4-4fd0-adaa-cc52c216d4a0_map_complexity_metrics.yml  5c9d3b98-43e4-4fd0-adaa-cc52c216d4a0_map_obstacle_metrics.yml  5c9d3b98-43e4-4fd0-adaa-cc52c216d4a0_performance_metrics.yml
arena-bringup/: package.xml
arena_bringup/: CMakeLists.txt  package.xml  project_eval.sh  random_eval.sh  random_eval_v2.sh  (+3 more)
arena_navigation/arena_intermediate_planner/: CMakeLists.txt  package.xml
arena_navigation/arena_intermediate_planner/include/arena_intermediate_planner/: intermediate_planner.h  plan_container_mid.hpp
arena_navigation/arena_intermediate_planner/src/: intermediate_planner.cpp
arena_navigation/arena_intermediate_planner/waypoint-generators/: simple-subsampling.py
arena_navigation/arena_local_planner/model_based/all_in_one_teb_interface/: CMakeLists.txt  package.xml
arena_navigation/arena_local_planner/model_based/all_in_one_teb_interface/include/all_in_one_teb_interface/: all_in_one_teb_interface.h  all_in_one_teb_node.h  local_costmap_node.h
arena_navigation/arena_local_planner/model_based/all_in_one_teb_interface/launch/: start_all_in_one_teb_node.launch
arena_navigation/arena_local_planner/model_based/all_in_one_teb_interface/scripts/: start_teb_node.py
arena_navigation/arena_local_planner/model_based/all_in_one_teb_interface/src/: all_in_one_teb_interface.cpp  all_in_one_teb_node.cpp  local_costmap_node.cpp
arena_navigation/arena_local_planner/model_based/all_in_one_teb_interface/srv/: ResetCostmap.srv  TebService.srv
arena_navigation/arena_path_search/: CMakeLists.txt  package.xml
arena_navigation/arena_path_search/include/arena_path_search/: astar.h  astar2.h  dyn_astar.h  dyn_channel.h  graph_search.h  grid_node.h  jps.h  jps_utils.h  kinodynamic_astar.h
arena_navigation/arena_path_search/src/: astar.cpp  astar2.cpp  delaunator_triangle.cpp  dyn_astar.cpp  jps.cpp  jps_utils.cpp  kinodynamic_astar.cpp
arena_navigation/arena_plan_manager/: CMakeLists.txt  package.xml
arena_navigation/arena_plan_manager/include/arena_plan_manager/: plan_collector.h  plan_manager.h  robot_state.h
arena_navigation/arena_plan_manager/src/: plan_collector.cpp  plan_manager copy.cpp  plan_manager.cpp  plan_manager_node.cpp  test_node.cpp
arena_navigation/observations/: CMakeLists.txt  package.xml
arena_navigation/observations/common/: f_math.cpp  f_math.h  zVector2d.cpp  zVector2d.h
arena_navigation/observations/msg/: Observation.msg
arena_navigation/observations/observation_packer/: Transform2D.h  observation_packer.cpp  observation_packer_odom.cpp
(+7545 files in other folders)
